# echonexus

./: .replit  DOCUMENTATION.md  ai_guidance.py  app.py  collaborative.py  dao_governance.py  data_module.py  monte_carlo_engine.py  nft_module.py  pdf_export.py  pyproject.toml  rag_module.py  replit.md  social_db.py  social_module.py  tts_module.py  visualization_3d.py  voice_input.py  vtc_api.py  vtc_engine.py
attached_assets/: Pasted-EchoWorld-Nexus-Secure-Financial-Guardian-Simulator-Bul_1765986773257.txt  Pasted-EchoWorld-Nexus-Secure-Financial-Guardian-Simulator-Bul_1765994361210.txt  Pasted-It-looks-like-the-audio-feature-in-your-EchoWorld-Nexus_1766135190582.txt  Pasted-Key-Things-to-Confirm-Working-for-Your-EchoWorld-Nexus-_1766133541549.txt  Pasted-Yes-most-of-this-advice-is-spot-on-and-highly-valuable-_1765994329913.txt  Pasted-Yes-you-can-absolutely-switch-from-hardcoded-data-to-re_1766132429724.txt
