[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "faiss-cpu>=1.13.1",
    "gtts>=2.5.4",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.4",
    "numpy>=2.3.5",
    "openai>=2.13.0",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "psycopg2-binary>=2.9.11",
    "reportlab>=4.4.6",
    "requests>=2.32.5",
    "streamlit>=1.52.1",
    "web3>=7.14.0",
]
